--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,6 +21,7 @@
         <form method="POST">
             <div class="input">
                 <input type="text" class="button" id="longURL" placeholder="HTTPS://WWW.SUTD.EDU.SG" autocomplete="off">
+                <div class="vertical-line"></div>
                 <input type="text" class="button" id="shortURL" placeholder="HTTPS://WWW.SUTD.EDU.SG" autocomplete="off">
                 <input type="submit" class="button" id="sutdify" value="SUTDIFY">
                 <input type="submit" class="button" id="copy" value="COPY">
