--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="notify"><span id="notifyType" class=""></span></div>
      <div class="main-content">
+        <div id="snackbar">Some text some message..</div>
         <div class = "title">
              <div class="header">
             <p>Enter a url to make a SUTD url</p>
@@ -22,17 +23,13 @@
             <div class="input">
                 <input type="text" class="button" id="longURL" placeholder="HTTPS://WWW.SUTD.EDU.SG" autocomplete="off">
                 <div class="vertical-line"></div>
-                <input type="text" class="button" id="shortURL" placeholder="HTTPS://WWW.SUTD.EDU.SG" autocomplete="off">
+                <input tyspe="text" class="button" id="shortURL" placeholder="RANDOM" autocomplete="off">
                 <input type="submit" class="button" id="sutdify" value="SUTDIFY">
                 <input type="submit" class="button" id="copy" value="COPY">
             </div>
-                {{!-- <input id="longURL" placeholder="Paste your link here">
-                <input id="id" placeholder="short id">
-                <button id="sutdify">SUTDIFY</button>
-                <button id="copy">COPY</button>  --}}
-  
         </form>
     </div>
+    {{!-- <p>{{>footer}}</p> --}}
     <script src="./js/app.js" type="text/javascript"></script>
 </body>
 </html>
