--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,7 +7,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'></head>
-<body>
+    <script src="https://kit.fontawesome.com/96a5f0a4a3.js" crossorigin="anonymous"></script><body>
+    <p>{{>header}}</p>
+    <i class="fab fa-github"></i>
     <div class="notify"><span id="notifyType" class=""></span></div>
      <div class="main-content">
         <div id="snackbar">Some text some message..</div>
@@ -29,7 +31,6 @@
             </div>
         </form>
     </div>
-    {{!-- <p>{{>footer}}</p> --}}
     <script src="./js/app.js" type="text/javascript"></script>
 </body>
 </html>
