--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,4 +1,8 @@
+<script src="https://kit.fontawesome.com/96a5f0a4a3.js" crossorigin="anonymous"></script><body>
 <header>
-    <a href="/">sutd.live</a>
-    {{!-- <i class="fab fa-github"></i> --}}
+    <a href="/">{{title}}</a>
+    <div class="navigator">
+        <div class='child inline-block-child'> <p> Dashboard </p></div>
+        <div class='child inline-block-child'><i  class="fab fa-github" onclick="github()"></i></div>
+    </div>
 </header>
