--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,12 +7,12 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'></head>
-    <script src="https://kit.fontawesome.com/96a5f0a4a3.js" crossorigin="anonymous"></script><body>
-    <p>{{>header}}</p>
-    <i class="fab fa-github"></i>
+    <link href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap" rel="stylesheet">
+    {{>header}}
     <div class="notify"><span id="notifyType" class=""></span></div>
      <div class="main-content">
-        <div id="snackbar">Some text some message..</div>
+         <body>
+        <div id="snackbar">error</div>
         <div class = "title">
              <div class="header">
             <p>Enter a url to make a SUTD url</p>
@@ -21,16 +21,22 @@
                 <p>Want to let people know you are from SUTD without saying you’re from SUTD?  If you have a weblink to your personal portfolio, SUTDIFY and share it.</p>
             </div>
         </div>
-        <form method="POST">
+        <div class="form-btns">
             <div class="input">
-                <input type="text" class="button" id="longURL" placeholder="HTTPS://WWW.SUTD.EDU.SG" autocomplete="off">
-                <div class="vertical-line"></div>
-                <input tyspe="text" class="button" id="shortURL" placeholder="RANDOM" autocomplete="off">
-                <input type="submit" class="button" id="sutdify" value="SUTDIFY">
-                <input type="submit" class="button" id="copy" value="COPY">
+                <form method="POST">
+                    <input type="text" class="button" id="longURL" placeholder="HTTPS://WWW.SUTD.EDU.SG" autocomplete="off">
+                    <div class="vertical-line"></div>
+                    <input type="text" class="button" id="shortURL" placeholder="^\w+$" autocomplete="off">
+                    <button type="submit" class="button" id="sutdify" value="SUTDIFY">SUTDIFY</button>
+                </form>
             </div>
-        </form>
+                <div class="tooltip">
+                    <span  class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+                    <button class="button" id="copy" onClick="copyToClipBoard()" onmouseout="outFunc()">COPY</button>
+                </div>
+        </div>
     </div>
     <script src="./js/app.js" type="text/javascript"></script>
+    {{>author}}
 </body>
 </html>
